# lux-academy

./: README.md  pyproject.toml
src/lux_academy/5-week-bootcamp/week-1/: article.md  weather-analysis.ipynb  weather.db
src/lux_academy/5-week-bootcamp/week-2/: Datamanipulation.ipynb  article.md  weather-data-eda.ipynb
src/lux_academy/5-week-bootcamp/week-4/: article.md  assignment.md  is-string-palindrome.py  solutions.ipynb
