[project]
name = "lux-academy"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Antony Nyagah", email = "tony.m.nyagah@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "jupyterlab>=4.2.4",
    "ipython-sql>=0.5.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
