[project]
name = "lux-academy"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Antony Nyagah", email = "tony.m.nyagah@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "jupyterlab>=4.2.4",
    "ipython-sql>=0.5.0",
    "debugpy>=1.8.5",
    "matplotlib>=3.9.1.post1",
    "seaborn>=0.13.2",
    "numpy>=2.0.1",
    "scipy>=1.14.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
